update comments structure and cascade delete them with issues
