# api/server/handlers/get.go
@@ -11,10 +11,44 @@ import (
 	"go.uber.org/zap"
 )
 
+//HandleGETAllIssues - Route to retrieve all issues
+// @summary Retrieves all existing issues
+// @description Retrieves all issues
+// @tags Retrieval
+// @accept json
+// @produce json
+// @success 200 {object} models.IssueResponse
+// @failure 400 {object} models.ErrorWrapper
+// @failure 404 {object} models.ErrorWrapper
+// @failure 500 {object} models.ErrorWrapper
+// @router /issues [get]
+func HandleGETAllIssues(storage persistence.Storage) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		l := c.MustGet("logger").(*zap.SugaredLogger).With("handler", "[GET] get-all-issues")
+
+		issuesResponse, err := storage.RetrieveIssues()
+
+		if err == sql.ErrNoRows {
+			models.SetErrorStatusJSON(c, http.StatusNotFound, "could not find issue")
+			return
+		}
+
+		if err != nil {
+			l.Errorf("error retrieving issue in db: %s", err.Error())
+			models.SetErrorStatusJSON(c, http.StatusInternalServerError, err.Error())
+			return
+		}
+
+		l.Debug("issues successfully retrieved")
+		c.JSON(200, issuesResponse)
+		return
+	}
+}
+
 //HandleGETByID - Route to retrieve an issue by the issue id
 // @summary Retrieves an issue given issue id
 // @description Retrieves an issue given issue id
-// @tags issue
+// @tags Retrieval
 // @accept json
 // @produce json
 // @Param id path int true "ID of the issue"
@@ -55,7 +89,7 @@ func HandleGETByID(storage persistence.Storage) gin.HandlerFunc {
 //HandleGETByStatus - Route to retrieve an issue filtered by the status
 // @summary Retrieves an issue given status
 // @description Retrieves an issue given status (open, closed, in progress)
-// @tags issue
+// @tags Retrieval
 // @accept json
 // @produce json
 // @param status query models.StatusQueryParam false "issue priority request"
@@ -97,14 +131,13 @@ func HandleGETByStatus(storage persistence.Storage) gin.HandlerFunc {
 //HandleGETByPriority - Route to retrieve an issue filtered by the priority
 // @summary Retrieves an issue given priority
 // @description Retrieves an issue given priority
-// @tags issue
+// @tags Retrieval
 // @accept json
 // @produce json
 // @param start query models.PriorityQueryParam false "priority start bound"
 // @param end query models.PriorityQueryParam false "priority end bound"
 // @success 200 {object} models.IssueResponse
 // @failure 400 {object} models.ErrorWrapper
-// @failure 404 {object} models.ErrorWrapper
 // @failure 500 {object} models.ErrorWrapper
 // @router /issues/priority [get]
 func HandleGETByPriority(storage persistence.Storage) gin.HandlerFunc {
@@ -119,11 +152,6 @@ func HandleGETByPriority(storage persistence.Storage) gin.HandlerFunc {
 		}
 
 		issueResponse, err := storage.RetrieveIssueByPriority(priorityQuery.PriorityStart, priorityQuery.PriorityEnd)
-
-		if err == sql.ErrNoRows {
-			models.SetErrorStatusJSON(c, http.StatusNotFound, "could not find issue")
-			return
-		}
 
 		if err != nil {
 			l.Errorf("error retrieving issue in db: %s", err.Error())
